# mollweide

./: .gitignore  CMakeLists.txt  README.md  fast_journey.py  globe.cpp  globe.cpp.bak  globe.cpp.clean  journey_each_frame.py  journey_log.txt  journey_video.py  run_journey.py  test_pipe  test_pipe.cpp  test_probe  test_probe.cpp
video/: test_fork  test_fork.c
